[package]
name = "zodl_ironwood_migration"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared Orchard→Ironwood wallet migration engine (ported from vizor-wallet), consumed by libzcashlc (iOS) and backend-lib (Android)."
repository = "https://github.com/ZODL/ZODLIronwoodMigrationRust"

[features]
# The valargroup-backed integration (the ReservedInputSource adapter, the propose/sign/balance
# calls, and the MigrationContext facade) is on by default. Building/testing the lightweight
# core in isolation is `cargo test --no-default-features` (links only the lightweight zcash_protocol).
default = ["librustzcash-backend"]
librustzcash-backend = [
    "dep:zcash_client_backend",
    "dep:zcash_client_sqlite",
    "dep:zcash_primitives",
    "dep:zcash_keys",
    "dep:zcash_address",
    "dep:zcash_proofs",
    "dep:zcash_transparent",
    "dep:zip321",
    "dep:orchard",
    "dep:pczt",
    "dep:rand",
    "dep:uuid",
]

[dependencies]
# ----- core (always compiled) -----
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MUST single-version with the librustzcash workspace (rusqlite 0.37 + bundled) so there is one
# rusqlite and one bundled libsqlite3-sys across the whole build.
rusqlite = { version = "0.37", features = ["bundled"] }
hex = "0.4"
# zcash_protocol is REQUIRED: the public API uses its canonical Network/Zatoshis/BlockHeight types.
# Pinned to the same git source+branch as the backend crates so the direct and transitive
# zcash_protocol resolve to a single crate.
zcash_protocol = { version = "0.10.0-pre.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5" }

# ----- backend (optional): upstream zcash/librustzcash -----
# The valargroup qleak PRs have been merged upstream, so track zcash/librustzcash directly. Pinned
# by rev (eb828ca, main HEAD at migration time) for reproducibility; all librustzcash crates share
# one git source+rev so they unify to a single copy of each crate. orchard is a crates.io dep
# matching that rev's workspace; the direct dep and the transitive dep resolve to a single orchard.
# The Ironwood APIs are gated `#[cfg(zcash_unstable = "nu6.3")]`; the cfg is set in
# .cargo/config.toml. `unstable` exposes the `proposed_version` parameter used to force V6.
zcash_client_backend = { version = "0.23.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", features = ["orchard", "transparent-inputs", "unstable", "pczt"], optional = true }
zcash_client_sqlite = { version = "0.21.1", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", features = ["orchard", "transparent-inputs", "unstable", "serde"], optional = true }
zcash_primitives = { version = "0.29.0-pre.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", optional = true }
zcash_keys = { version = "0.15.0-pre.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", features = ["orchard"], optional = true }
zcash_address = { version = "0.13.0-pre.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", optional = true }
zcash_transparent = { version = "0.9.0-pre.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", optional = true }
zip321 = { version = "0.8.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", optional = true }
zcash_proofs = { version = "0.29.0-pre.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", optional = true }
# pczt: the crate persists/signs migration txs as PCZTs (issue #1). Role features mirror what
# zcash_client_backend's `pczt` feature enables, plus `orchard`.
pczt = { version = "0.7.0", git = "https://github.com/zcash/librustzcash", rev = "eb828caadb4b2be4a39823f95e50b42731a515f5", default-features = false, features = ["orchard", "io-finalizer", "prover", "signer", "spend-finalizer", "tx-extractor", "zcp-builder"], optional = true }
# orchard is a plain crates.io dep matching upstream librustzcash main (workspace uses
# 0.15.0-pre.1); this unifies the direct dep with the transitive dep to a single orchard.
orchard = { version = "0.15.0-pre.1", default-features = false, features = ["circuit"], optional = true }
shardtree = { version = "0.6.2", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(zcash_unstable, values("nu6.3"))'] }
